# llama.cpp

./: .gitignore  Makefile  README.md  README_xtof.md  baseline.py  choosemodel.c  compacts.c  compacts.cpp  convert_hf_to_gguf.py  create_edited_model.sh  detgguf.cpp  ff_xtofe.sh  fit_lr.sh  freshnewspreprocess.py  full_xtofe.sh  gating_viz.ipynb  getdata.py  ggml-cuda.cu  ggml.c  gguf_to_hf.py  hfedit.py  homerun.sh  ladder.py  ladder_test.py  ladder_test_old.py  ladder_train.py  llama.cpp  musr1.py  musr1.sh  musr1b.sh  musr2.py  musr2.sh  musr2a.py  musr2b.py  musr2b.slurm  musr2ba.sh  musr3.sh  musr4.py  musr4.sh  musr5.py  (+8 more)
examples/: CMakeLists.txt
examples/cvector-generator/: cvector-generator.cpp  mean.hpp
examples/detson/: CMakeLists.txt  detgguf.cpp
examples/eval-callback/: eval-callback.cpp
examples/gguf/: gguf.cpp
examples/main/: main.cpp
examples/perplexity/: perplexity.cpp
examples/server/: server.cpp
ggml/src/: ggml-cuda.cu  ggml.c
gguf-py/gguf/: constants.py
modified_models/: modified_configuration_qwen2.py  modified_qwen2.py
paper/: paper.tex
sharedRAM/: cpp_ring.cpp  py_ring.py
src/: llama.cpp  xtofmini.cpp
tools/server/: server.cpp
